<resources>
    <string name="app_name">Bar - Restaurante</string>

    //MainActivity
    <string name="no_admin_msg">No eres administrador, no puedes utilizar esta función</string>

    //NavigatorDrawer
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    //Main Menu
    <string name="delete_product">Eliminar Producto</string>
    <string name="add_product">Añadir Producto</string>
    <string name="update_product">Modificar Producto</string>
    <string name="menu_product">Producto</string>
    <string name="organization">Organización</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="menu_user">Usuarios</string>
    <string name="close_session">Sesión cerrada</string>


    //Add Product
    <string name="add_product_title">Añadir Producto</string>
    <string name="title_add_foof">Añadir nueva Comida</string>
    <string name="add_type_food">Tipo de comida</string>
    <string name="add_food_name">Nombre</string>
    <string name="add_food_price">Precio €</string>
    <string name="add_food_image">Imagen Asociada al producto</string>
    <string name="add_food_text_button">AÑADIR</string>
    <string name="title_add_drink">Añadir nueva Bebida</string>
    <string name="add_type_drink">Tipo de bebida</string>
    <string name="price_no_valid_msg">Precio insertado no válido</string>
    <string name="add_food_successfull_msg">Se ha añadido correctamente</string>
    <string name="error_add_food_msg">Error no se ha podido añadir el producto</string>
    <string name="add_product_sucessfull">Añadido correctamente</string>
    <string name="attach_since">Adjuntar desde:</string>
    <string name="select_camera">Cámara</string>
    <string name="select_galery">Galería</string>
    <string name="select_cancel">Cancelar</string>
    <string name="not_add_photo_product">No se ha podido cargar la foto</string>
    <string name="error_add_product_msg">No se ha podido añadir el producto</string>
    <string name="no_load_product_selected">No se ha podido cargar los productos seleccionados</string>

    <string-array name="type_drink">
        <item>Cerveza</item>
        <item>Vinos Blancos</item>
        <item>Vinos Tintos</item>
        <item>Refrescos</item>
        <item>Copas</item>
        <item>Combinados</item>
        <item>Café &amp; Té</item>
    </string-array>
    <string-array name="type_food">
        <item>Tapas</item>
        <item>Raciones</item>
        <item>Bocadillos</item>
        <item>Menu</item>
        <item>Platos para compartir</item>
        <item>Desayunos</item>
    </string-array>

    //Delete Product
    <string name="name_food">Comida</string>
    <string name="name_drink">Bebida</string>
    <string name="delete_product_title">Eliminar Producto</string>
    <string name="item_delete_name_price">Precio: </string>
    <string name="txt_btn_cancel_warning">Cancelar</string>
    <string name="txt_btn_delete_warning">Eliminar</string>
    <string name="title_warning_delete">Eliminar Producto</string>
    <string name="txt_warning_delete">¿ Estás seguro de que desea eliminar el producto seleccionado ?</string>
    <string name="msg_succesfull_delete">Producto eliminado</string>
    <string name="msg_error_delete">ERROR: No se ha podido eliminar el producto seleccionado</string>

    //Update Product
    <string name="update_product_title">Actuallizar Producto</string>
    <string name="msg_succesfull_update">Producto Actualizado</string>
    <string name="msg_error_update">ERROR: No se ha podido actualizar el producto</string>
    <string name="title_update_product_dialog">Actualizar Producto</string>
    <string name="name_dialog_update">Nombre</string>
    <string name="price_dialog_update">Precio €</string>
    <string name="txt_img_update_dialog">Imagen asociada al producto</string>


    //Login
    <string name="txt_signup">REGISTRARME</string>
    <string name="txt_login">INICIAR SESIÓN</string>
    <string name="hint_pass_login">Contraseña</string>
    <string name="hint_email_sigup">Email</string>
    <string name="name_company_login">Bar - Restaurante</string>
    <string name="login_no_valid_msg">Email o contraseña incorrecta</string>
    <string name="must_complete_fields_login">Debes completar los campos email y contraseña</string>
    <string name="forgot_password1">¿Has olvidado la contraseña?</string>
    <string name="forgot_password2">Haz</string>
    <string name="forgot_password3">&#160;<a href="#">click aquí</a></string>

    //Splash
    <string name="loading_splash">Cargando ...</string>
    <string name="error_unknow_splash">Ups!! Ha ocurrido un error inesperado</string>
    <string name="error_version_noget">Error, no se ha podido obtener la versión</string>
    <string name="version_deprecated">Versión deprecada, app no disponible</string>

    //Signup
    <string name="email_sigup">Email</string>
    <string name="name_sigup">Nombre</string>
    <string name="surname_sigup">Apellido</string>
    <string name="pass_signup">Contraseña</string>
    <string name="repeat_pass_signup">Repetir Contraseña</string>
    <string name="signup_title">Registrar Usuario</string>
    <string name="txt_btn_signup">REGISTRAR</string>
    <string name="txt_email_novalid">Email no válido</string>
    <string name="txt_name_novalid">El nombre debe comprender entre 2-30 caracteres</string>
    <string name="txt_surname_novalid">El apellido debe comprender entre 2-60 caracteres</string>
    <string name="txt_pass_novalid">La contraseña no coincide o inferior a 6 caracteres</string>
    <string name="signup_user_ok">Usuario creado correctamente</string>
    <string name="signup_user_error">Error, no se ha podido crear el usuario</string>

    //Users
    <string name="error_load_users">Error, no se han podido cargar los usuarios</string>
    <string name="list_of_users">Lista de usuarios</string>
    <string name="user_update_ok">Usuario actualizado con éxito</string>
    <string name="user_update_error">Error inesperado, no se ha podido actualizar</string>
    <string name="no_update_admin">No se puede modificar. Al menos debe haber un administrador</string>

    //Recorved Pass
    <string name="email_recorvedpass">Email</string>
    <string name="recovery_password_message">Introduzca el correo electrónico con el que se registró para proporcionarle una nueva contraseña.</string>
    <string name="recorved_btn">Recuperar</string>
    <string name="recorved_title">Recuperar contraseña</string>
    <string name="email_no_valid_msg">Email no válido</string>
    <string name="recovery_pass_ok">Email enviado para el cambio de contraseña</string>
    <string name="recovery_pass_error">Error: no se ha podido mandar el email para el cambio de contraseña</string>

    //UBIC
    <string name="add_table_ok">Mesa añadida correctamente</string>
    <string name="add_table_error">No se ha podido añadir la mesa</string>
    <string name="can_not_add_table">No se pueden añadir más mesas</string>
    <string name="nothing_delete_table">No hay mesas para borrar</string>
    <string name="ok_delete_table">Mesa eliminada correctamente</string>
    <string name="no_delete_table">No se ha podido eliminar la mesa</string>

    //BILL
    <string name="attend_bill">Le atendió:</string>
    <string name="total_bill">Total:</string>
    <string name="amount_btn_bill">CUENTA</string>
    <string name="payed_btn_bill">PAGADO</string>
    <string name="product_bill">Producto</string>
    <string name="amount_tv_bill">Cantidad</string>
    <string name="price_unity_bill">Precio/U</string>
    <string name="total_tv_bill">Total</string>
    <string name="food_bill">COMIDA</string>
    <string name="drink_bill">BEBIDA</string>
    <string name="no_get_selected">No se ha podido obtener lo seleccionado</string>
    <string name="note_add_okk">Nota añadida</string>
    <string name="add_note_ok">Nota añadida</string>
    <string name="no_add_note">No se ha podido añadir la nota</string>
    <string name="no_info_table">No se ha podido obtener la información de la mesa</string>
    <string name="error_payment_bill">Error al proceder pago</string>
    <string name="payment_ok">Pago realizado</string>

</resources>