<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.fjhidalgo.restaurante.ui.toolbar.CustomAppBarLayout
            android:id="@+id/appPartnerBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways|snap">
        </com.fjhidalgo.restaurante.ui.toolbar.CustomAppBarLayout>

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@+id/appPartnerBarLayout"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/appPartnerBarLayout">

            <LinearLayout
                android:id="@+id/building_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appPartnerBarLayout">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/product_bill"
                         android:textSize="10dp"
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_weight="1"/>

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/amount_tv_bill"
                         android:textSize="10dp"
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_weight="1"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/price_unity_bill"
                         android:textSize="10dp"
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_weight="1"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/total_tv_bill"
                         android:textSize="10dp"
                         android:gravity="center"
                         android:textStyle="bold"
                         android:textColor="@color/black"
                         android:layout_weight="1"/>
                 </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/primaryColor"
                    android:layout_marginTop="2dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:id="@+id/ll_attend_total"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:visibility="invisible"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="11dp"
                                android:text="@string/attend_bill"/>

                            <TextView
                                android:id="@+id/name_barman"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:textSize="11dp"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="11dp"
                                android:text="@string/total_bill"/>

                            <TextView
                                android:id="@+id/tv_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:textSize="11dp"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:textSize="11dp"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:text="€"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1.1">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_weight="1">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Theme.Light.BlueButton"
                                android:text="@string/amount_btn_bill"/>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_payed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Theme.Light.BlueButton"
                                android:visibility="gone"
                                android:text="@string/payed_btn_bill"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_weight="1">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_food"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Theme.Light.GreenButton"
                                android:text="@string/food_bill"/>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_drink"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Theme.Light.RedButton"
                                android:text="@string/drink_bill"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>